[package]
name = "bluefile"
version = "0.5.5"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
description = "Experimental Rust library for handling X-Midas Bluefiles."
homepage = "https://github.com/spectriclabs/bluefile"
repository = "https://github.com/spectriclabs/bluefile"

[dependencies]
deku = "0.20.3"
num = "0.4"
num-traits = "0.2.19"
rkyv = { version = "0.8.14" }
serde = { version = "1.0.228", features = ["derive", "serde_derive"] }
serde_bytes = "0.11.19"
zerocopy = { version = "0.8.39", features = ["derive"] }

[lib]
name = "bluefile"
path = "src/lib.rs"

[[bin]]
name = "bluejay"
path = "src/bluejay.rs"
